--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content=" FILL ME IN ">
     <meta name="author" content=" FILL ME IN ">
+    <meta http-equiv="Cache-control" content="max-age=30">
     <title>Cameron Pittman: Portfolio</title>
 
     <link href="css/print.css" rel="stylesheet" media="print">
